--- a/src/app/employees/employee-list/employee-list.component.html
+++ b/src/app/employees/employee-list/employee-list.component.html
@@ -1,8 +1,8 @@
 <div class="search-div">
-    <button mat-raised-button>
+    <button mat-raised-button (click)="onCreate()">
         <mat-icon>add</mat-icon>Create
     </button>
-    <mat-form-field class="margLeft">
+    <mat-form-field class="search-form-field">
         <mat-label>Filter</mat-label>
         <!-- <input matInput [(ngModul)]="searchKey" (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input> -->
         <input matInput [(ngModel)]="searchKey" (keyup)="applyFilter()" placeholder="Ex. Mia" #input>
@@ -30,11 +30,15 @@
             <mat-header-cell *matHeaderCellDef mat-sort-header>City</mat-header-cell>
             <mat-cell *matCellDef="let element"> {{element.city}} </mat-cell>
         </ng-container>
+        <ng-container matColumnDef="hireDate" >
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.hireDate | date :'dd:MM:yyyy'}} </mat-cell>
+        </ng-container>
         <ng-container matColumnDef="action">
             <mat-header-cell *matHeaderCellDef></mat-header-cell>
             <mat-cell *matCellDef="let row">
-                 <button mat-icon-button><mat-icon>launch</mat-icon></button>
-                 <button mat-icon-button color="warn"><mat-icon>delete_outline</mat-icon></button>
+                 <button mat-icon-button (click)="onEdit(row)"><mat-icon>launch</mat-icon></button>
+                 <button mat-icon-button color="warn"  (click)="onDelete(row.$key)"><mat-icon>delete_outline</mat-icon></button>
             </mat-cell>
         </ng-container>
         <ng-container matColumnDef="loading">
